@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         XML-RSS-TimingBot
-version:      2.01
+version:      2.02
 version_from: lib/XML/RSS/TimingBot.pm
 installdirs:  site
 requires:
