@@ -1,6 +1,16 @@
 Revision history for Perl extension XML::RSS::TimingBot
-                                        Time-stamp: "2004-04-24 00:51:17 ADT"
+                                        Time-stamp: "2004-04-30 19:36:21 ADT"
 
+2004-04-30  Sean M. Burke  sburke@cpan.org
+        * Release 2.02 -- first CPAN release.
+
+	Added rss_semaphore_file and support for it.
+
+	Added a longish note about "USING UNDER WITH LWP::Simple", for
+	when want to just drop in this class in programs that's using
+	LWP::Simple.
+	
+	
 2004-04-24  Sean M. Burke  sburke@cpan.org
 	* Release 2.01 -- first CPAN release.
 
